applets/weather: Only show wetter.com results as a fallback

The provider "wetter.com" does not provide current weather status,
just a 3-day forecast, resulting in a less useful experience
and bug reports about its "missing data".

On the other hand, it has the largest coverage, so let's offer
those results only when no other provider found a location
that matches the search.

BUG: 389766
FIXED-IN: 6.2